fixed bug with mixed case boundaries

--- a/package.xml
+++ b/package.xml
@@ -24,9 +24,9 @@ This extension does not provide any INI entries, constants, functions or classes
   <email>mike@php.net</email>
   <active>yes</active>
  </lead>
- <date>2015-03-18</date>
+ <date>2015-04-24</date>
  <version>
-  <release>1.0.0</release>
+  <release>1.0.1</release>
   <api>1.0.0</api>
  </version>
  <stability>
@@ -35,7 +35,7 @@ This extension does not provide any INI entries, constants, functions or classes
  </stability>
  <license>BSD, revised</license>
  <notes><![CDATA[
-* Split off pecl_http
+* Fix bug where non-POST payloads with mixed case boundaries would not be parsed
 ]]></notes>
  <contents>
   <dir name="/">
@@ -50,6 +50,7 @@ This extension does not provide any INI entries, constants, functions or classes
    <dir name="tests">
      <file role="test" name="001.phpt"/>
      <file role="test" name="002.phpt"/>
+     <file role="test" name="003.phpt"/>
    </dir>
   </dir>
  </contents>
