--- a/package.xml
+++ b/package.xml
@@ -24,9 +24,9 @@ This extension does not provide any INI entries, constants, functions or classes
   <email>mike@php.net</email>
   <active>yes</active>
  </lead>
- <date>2015-04-24</date>
+ <date>2020-09-21</date>
  <version>
-  <release>1.0.1</release>
+  <release>1.0.2</release>
   <api>1.0.0</api>
  </version>
  <stability>
@@ -35,7 +35,8 @@ This extension does not provide any INI entries, constants, functions or classes
  </stability>
  <license uri="http://copyfree.org/content/standard/licenses/2bsd/license.txt">BSD-2-Clause</license>
  <notes><![CDATA[
-* Fix bug where non-POST payloads with mixed case boundaries would not be parsed
+* PHP-7.2+ compatibility
+* PHP-8.0 compatiblity
 ]]></notes>
  <contents>
   <dir name="/">
