--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -169,6 +169,60 @@ jobs:
         run: |
           make -f scripts/ci/Makefile test
 
+  old-matrix-6:
+    name: old-matrix-6
+    env:
+      PHP: "8.0"
+      enable_debug: "yes"
+      enable_maintainer_zts: "yes"
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: true
+      - name: Install
+        run: |
+          sudo apt-get install -y \
+            php-cli \
+            php-pear \
+            re2c
+      - name: Prepare
+        run: |
+          make -f scripts/ci/Makefile php || make -f scripts/ci/Makefile clean php
+      - name: Build
+        run: |
+          make -f scripts/ci/Makefile ext PECL=apfd
+      - name: Test
+        run: |
+          make -f scripts/ci/Makefile test
+
+  old-matrix-7:
+    name: old-matrix-7
+    env:
+      PHP: "8.1"
+      enable_debug: "yes"
+      enable_maintainer_zts: "yes"
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          submodules: true
+      - name: Install
+        run: |
+          sudo apt-get install -y \
+            php-cli \
+            php-pear \
+            re2c
+      - name: Prepare
+        run: |
+          make -f scripts/ci/Makefile php || make -f scripts/ci/Makefile clean php
+      - name: Build
+        run: |
+          make -f scripts/ci/Makefile ext PECL=apfd
+      - name: Test
+        run: |
+          make -f scripts/ci/Makefile test
+
   master-0:
     name: master-0
     continue-on-error: true
@@ -200,7 +254,7 @@ jobs:
   cur-dbg-zts-0:
     name: cur-dbg-zts-0
     env:
-      PHP: "8.0"
+      PHP: "8.2"
       enable_debug: "yes"
       enable_zts: "yes"
     runs-on: ubuntu-20.04
@@ -227,7 +281,7 @@ jobs:
   cur-dbg-zts-1:
     name: cur-dbg-zts-1
     env:
-      PHP: "8.0"
+      PHP: "8.2"
       enable_debug: "no"
       enable_zts: "yes"
     runs-on: ubuntu-20.04
@@ -254,7 +308,7 @@ jobs:
   cur-dbg-zts-2:
     name: cur-dbg-zts-2
     env:
-      PHP: "8.0"
+      PHP: "8.2"
       enable_debug: "yes"
       enable_zts: "no"
     runs-on: ubuntu-20.04
@@ -281,7 +335,7 @@ jobs:
   cur-dbg-zts-3:
     name: cur-dbg-zts-3
     env:
-      PHP: "8.0"
+      PHP: "8.2"
       enable_debug: "no"
       enable_zts: "no"
     runs-on: ubuntu-20.04
@@ -310,7 +364,7 @@ jobs:
     env:
       CFLAGS: "-O0 -g --coverage"
       CXXFLAGS: "-O0 -g --coverage"
-      PHP: "8.0"
+      PHP: "8.2"
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
